Revision history for JSON-Schema-Modern

{{$NEXT}}
          - fix error when navigating a $dynamicRef after initial evaluation
            at a subschema

0.622     2025-11-08 22:22:19Z
          - allow export of JSON::Schema::Modern::Utilities::is_bool
          - adjust acceptance tests to handle new failure cases in the test
            suite for the hostname format

0.621     2025-10-30 17:56:52Z
          - adjust acceptance tests to handle new failure cases in the test
            suite for hostname, idn-hostname formats

0.620     2025-10-15 23:36:52Z
          - new "clone" method for Error objects
          - work around an issue with using an object overload as a constant
            on perl 5.20

0.619     2025-09-28 22:28:52Z
          - internal changes only (breaking changes for dependencies like
            OpenAPI::Modern)

0.618     2025-09-07 20:27:21Z
          - the json-schema-eval executable now also handles YAML-encoded
            schemas and data, via both files and STDIN, via string
            autodetection

0.617     2025-08-16 20:50:11Z
          - various internal changes for performance improvement

0.616     2025-07-26 23:15:28Z
          - documentation notes added for which definitions can be overridden
            (formats, media-types and encodings can; vocabularies cannot).
          - "validate" in JSON::Schema::Modern::Document must now be provided
            with a JSON::Schema::Modern object if a custom metaschema is used
            by the schema (this is a forward-looking change in preparation for
            removing the "evaluator" attribute from the JSMD object in a
            subsequent release).

0.615     2025-07-12 16:12:36Z
          - do not allow the use of builtin bools when Storable is too old to
            know how to serialize them
          - avoid experimental warnings in tests from perl versions 5.36.0 to
            5.40.0

0.614     2025-06-28 18:51:12Z