@@ -3,6 +3,8 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - fix error when navigating a $dynamicRef after initial evaluation
             at a subschema
+          - fix incorrect $dynamicRef target following changing scopes into a
+            subschema of a schema resource (one with an $id)
 
 0.622     2025-11-08 22:22:19Z
           - allow export of JSON::Schema::Modern::Utilities::is_bool
